--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>SENTIR UI KITS</title>
+    <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
     <!-- BOOTSTRAP CSS (REQUIRED ALL PAGE)-->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="mc_components/plugins/font-awesome/css/font-awesome.min.css" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- PLUGINS CSS -->
     <link rel="stylesheet" href="mc_components/plugins/owl-carousel/owl.carousel.css"/>
@@ -76,9 +77,7 @@
 <script src="mc_components/plugins/owl-carousel/owl.carousel.js"></script>
 
 <!-- WEATHER SKYCON JS-->
-<script src="mc_components/plugins/skycons/skycons.js"></script>
-<!--<script src="bower_components/skycons/skycons.js"></script>-->
-<script src="/bower_components/angular-skycons/angular-skycons.js"></script>
+<script src="bower_components/skycons/skycons.js"></script>
 
 <!-- EASY PIE CHART JS -->
 <script src="bower_components/easy-pie-chart/angular.easypiechart.min.js"></script>
